--- a/force-app/main/default/lwc/contactsRelatedToAccount/contactsRelatedToAccount.html
+++ b/force-app/main/default/lwc/contactsRelatedToAccount/contactsRelatedToAccount.html
@@ -1,15 +1,14 @@
 <template>
-    <template if:true={contacts}>
-        <lightning-card title="Related Contacts">
+    <lightning-card title="Related Contacts">
+
+        <template if:true={contacts.data}>
             <lightning-datatable
                 key-field="id"
-                data={contacts}
-                columns={columns}
-                hide-checkbox-column>
+                data={contacts.data}
+                columns={columns}>
             </lightning-datatable>
-        </lightning-card>
-    </template>
-    <template if:true={error}>
-        <div class="slds-text-color_error">Error loading contacts: {error.message}</div>
-    </template> 
+        </template>
+        
+    </lightning-card>
+
 </template>
